tests/ui/diagnostic-not-implemented-known-layout.msrv.stderr
error[E0277]: the trait bound `NotZerocopy: KnownLayout` is not satisfied
  --> $DIR/diagnostic-not-implemented-known-layout.rs:16:26
   |
16 |     takes_known_layout::<NotZerocopy>();
   |                          ^^^^^^^^^^^ the trait `KnownLayout` is not implemented for `NotZerocopy`
   |
note: required by a bound in `takes_known_layout`
  --> $DIR/diagnostic-not-implemented-known-layout.rs:19:26
   |
19 | fn takes_known_layout<T: KnownLayout>() {}
   |                          ^^^^^^^^^^^ required by this bound in `takes_known_layout`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
